force-app/main/default/objects/PMC_DH_DocumentType__mdt/PMC_DH_DocumentType__mdt.object-meta.xml
<CustomObject>
    <description>Metadata for Document types</description>
    <label>Digital Hub Document Type</label>
    <pluralLabel>Digital Hub Document Types</pluralLabel>
</CustomObject>