force-app/main/default/objects/PMC_DH_DocumentType__mdt/fields/PMC_DH_Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_Billing_Type__c</fullName>
    <label>Billing Type</label>
    <type>TextArea</type>
</CustomField>