force-app/main/default/objects/PMC_DH_DocumentType__mdt/fields/PMC_DH_DocumentCode__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_DocumentCode__c</fullName>
    <label>Document Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>